--- a/projects/cursor-follower/src/index.css
+++ b/projects/cursor-follower/src/index.css
@@ -1,3 +1,7 @@
+body.no-cursor {
+  cursor: none;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
